# Soccer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AI/: CMakeLists.txt  config.h  locomotion.cpp  locomotion.h  main.cpp
Control/: Controller.cpp  Controller.hpp  MainLoop.cpp  MainLoop.hpp
Hardware/: HardwareClient.cpp  HardwareClient.h  HardwareImage.cpp  HardwareImage.h  HardwareServer.cpp  HardwareServer.h  motors.h  zhelpers.h
Motion/: CMakeLists.txt  Robot.cpp  Robot.h  robot.cpp
Utils/: params.cpp  params.hpp  utils.cpp
Vision/: CMakeLists.txt  Sensor.cpp  Sensor.hpp  calibrate.cpp  calibrate.hpp  main.cpp  params.cpp  params.hpp  tim.cpp  tim.hpp  vision-tim.cpp  vision.cpp  vision.hpp
Web/: README.md  image.php  index.php  refresh.js
